--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/git-game/website/issues"
   },
-  "homepage": "https://github.com/git-game/website#readme"
+  "homepage": "https://github.com/git-game/website#readme",
+  "dependencies": {
+    "ejs": "^2.4.1",
+    "express": "^4.13.4"
+  }
 }
